Completes basic requirements.

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,12 +6,16 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/greenDancer.js"></script>
+    <script src="src/blueDancer.js"></script>
   </head>
   <body>
 
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlueDancer">add a blue dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="GreenDancer">add a green dancer</a>
     </div>
 
     <script>
@@ -37,10 +41,10 @@
           var dancerMakerFunction = window[dancerMakerFunctionName];
 
           // make a dancer with a random position
-          var dancer = dancerMakerFunction(
+          var dancer = new dancerMakerFunction(
             $("body").height() * Math.random(),
             $("body").width() * Math.random(),
-            Math.random() * 1000
+            50
           );
 
           $('body').append(dancer.$node);
