--- a/dancefloor.html
+++ b/dancefloor.html
@@ -16,6 +16,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlueDancer">add a blue dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="GreenDancer">add a green dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="GreenDancer">add a danny dancer</a>
     </div>
 
     <script>
@@ -54,3 +55,12 @@
 
   </body>
 </html>
+
+<!-- var wiggle = function(myelement) {
+  var pos = $(myelement).position();
+  $(myelement)
+    .animate({'left':(pos[0]-10)+'px'},200)
+    .animate({'left':(pos[0]+10)+'px'},200)
+    .animate({'left':(pos[0])+'px'},200);
+ };
+ -->
